added logger - added login - changes playlist management permissions